<resources>
    <string name="app_name">EffectiveMobile</string>
    <string name="login">Вход</string>
    <string name="email_name">Email</string>
    <string name="email_example">example@gmail.com\n</string>
    <string name="password_name">Пароль</string>
    <string name="password_example">Введите пароль</string>
    <string name="no_acc">Нету аккаунта? Регистрация</string>
    <string name="forget_password">Забыл пароль</string>
    <string name="search_courses">Search courses...</string>
    <string name="filter">Отфильтровать</string>
    <string name="date_of_include">По дате добавления</string>
    <string name="bookmark">закладка</string>
    <string name="show_more">Подробнее</string>
    <string name="favourites">Избранное</string>
    <string name="profile">Аккаунт</string>
</resources>