<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <EditText
            android:id="@+id/et_search"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_elements"
            android:hint="@string/search_courses"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/extralightgray"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"/>

        <ImageButton
            android:id="@+id/btn_filter"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_circle_button"
            android:src="@drawable/ic_filter"
            android:layout_marginStart="16dp"
            app:tint="@color/white"
            android:scaleType="center"
            android:padding="16dp"
            android:contentDescription="@string/filter"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:drawablePadding="4dp"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:text="@string/date_of_include"
        android:textColor="@color/green_text"
        android:drawableEnd="@drawable/ic_sort"
        tools:ignore="TouchTargetSizeCheck" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCourses"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="8dp"/>
</LinearLayout>
